basic saving and calculations

--- a/public/index.html
+++ b/public/index.html
@@ -77,127 +77,127 @@
         <div id="characterAbilitySidebar" class="menuHolder">
             <!-- Abilities -->
             <h1 class="centerFlexAlign characterSheetBarHeader">⚄ Abilities ⚄</h1>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="acrobaticsModifierHolder">
                 <p class="characterAbilitySidebarText">Acrobatics <span class="subscript">(Dex)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="animalHandlingModifierHolder">
                 <p class="characterAbilitySidebarText">Animal Handling <span class="subscript">(Wis)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="arcanaModifierHolder">
                 <p class="characterAbilitySidebarText">Arcana <span class="subscript">(Int)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="athleticsModifierHolder">
                 <p class="characterAbilitySidebarText">Athletics<span class="subscript">(Str)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="deceptionModifierHolder">
                 <p class="characterAbilitySidebarText">Deception<span class="subscript">(Cha)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="historyModifierHolder">
                 <p class="characterAbilitySidebarText">History<span class="subscript">(Int)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="insightModifierHolder">
                 <p class="characterAbilitySidebarText">Insight<span class="subscript">(Wis)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="intimidationModifierHolder">
                 <p class="characterAbilitySidebarText">Intimidation<span class="subscript">(Cha)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="investigationModifierHolder">
                 <p class="characterAbilitySidebarText">Investigation<span class="subscript">(Int)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="medicineModifierHolder">
                 <p class="characterAbilitySidebarText">Medicine<span class="subscript">(Wis)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="natureModifierHolder">
                 <p class="characterAbilitySidebarText">Nature<span class="subscript">(Int)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="perceptionModifierHolder">
                 <p class="characterAbilitySidebarText">Perception<span class="subscript">(Wis)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="performanceModifierHolder">
                 <p class="characterAbilitySidebarText">Performance<span class="subscript">(Cha)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="persuasionModifierHolder">
                 <p class="characterAbilitySidebarText">Persuasion<span class="subscript">(Cha)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="religionModifierHolder">
                 <p class="characterAbilitySidebarText">Religion<span class="subscript">(Int)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="sleightOfHandModifierHolder">
                 <p class="characterAbilitySidebarText">Sleight of Hand<span class="subscript">(Dex)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="stealthModifierHolder">
                 <p class="characterAbilitySidebarText">Stealth<span class="subscript">(Dex)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="survivalModifierHolder">
                 <p class="characterAbilitySidebarText">Survival<span class="subscript">(Wis)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
             <!-- Saving Throws -->
             <h1 class="centerFlexAlign characterSheetBarHeader">⟁ Saving Throws ⟁</h1>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="strSaveModifierHolder">
                 <p class="characterAbilitySidebarText">Strength</p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="dexSaveModifierHolder">
                 <p class="characterAbilitySidebarText">Dexterity</p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="conSaveModifierHolder">
                 <p class="characterAbilitySidebarText">Constitution</p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
-                <p class="characterAbilitySidebarText">Intelligence</p>
-                <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
-            </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="wisSaveModifierHolder">
                 <p class="characterAbilitySidebarText">Wisdom</p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="intSaveModifierHolder">
+                <p class="characterAbilitySidebarText">Intelligence</p>
+                <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
+            </div>
+            <div class="characterAbilitySidebarHolder" id="chaSaveModifierHolder">
                 <p class="characterAbilitySidebarText">Charisma</p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
             <!-- Base Characteristics -->
             <h1 class="centerFlexAlign characterSheetBarHeader">✰ Characteristics ✰</h1>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="strBaseStatModifierHolder">
                 <p class="characterAbilitySidebarText">Strength<span class="subscript">(16)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="dexBaseStatModifierHolder">
                 <p class="characterAbilitySidebarText">Dexterity<span class="subscript">(16)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="conBaseStatModifierHolder">
                 <p class="characterAbilitySidebarText">Constitution<span class="subscript">(16)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
-                <p class="characterAbilitySidebarText">Intelligence<span class="subscript">(16)</span></p>
-                <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
-            </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="wisBaseStatModifierHolder">
                 <p class="characterAbilitySidebarText">Wisdom<span class="subscript">(16)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
-            <div class="characterAbilitySidebarHolder">
+            <div class="characterAbilitySidebarHolder" id="intBaseStatModifierHolder">
+                <p class="characterAbilitySidebarText">Intelligence<span class="subscript">(16)</span></p>
+                <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
+            </div>
+            <div class="characterAbilitySidebarHolder" id="chaBaseStatModifierHolder">
                 <p class="characterAbilitySidebarText">Charisma<span class="subscript">(16)</span></p>
                 <p class="characterAbilityDiceModifier centerFlexAlign">+3</p>
             </div>
@@ -266,39 +266,39 @@
                 <div id="characterClassesBackgroundSubpanel" class="characterClassesSubpanel hidden"></div>
                 <!-- The subpanel containing the characteristics and calculated stats of the character -->
                 <div id="characterClassesCharacteristicsSubpanel" class="characterClassesSubpanel">
-                    <div id="classesStrengthCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="strClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Str</p>
-                        <input id="characterCharacteristicBaseStrengthField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="strCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Str Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesStrengthModBtn">Add Str Mod</button>
-                    <div id="classesDexterityCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="dexClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Dex</p>
-                        <input id="characterCharacteristicBaseDexterityField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="dexCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Dex Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesDexterityModBtn">Add Dex Mod</button>
-                    <div id="classesConstitutionCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="conClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Con</p>
-                        <input id="characterCharacteristicBaseConstitutionField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="conCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Con Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesConstitutionModBtn">Add Con Mod</button>
-                    <div id="classesWisdomCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="wisClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Wis</p>
-                        <input id="characterCharacteristicBaseWisdomField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="wisCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Wis Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesWisdomModBtn">Add Wis Mod</button>
-                    <div id="classesIntelligenceCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="intClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Int</p>
-                        <input id="characterCharacteristicBaseIntelligenceField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="intCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Int Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesIntelligenceModBtn">Add Int Mod</button>
-                    <div id="classesCharismaCharacteristicsBox" class="characterClassPanelCharacteristicBox">
+                    <div id="chaClassesCharacteristicsBox" class="characterClassPanelCharacteristicBox">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold">Base Cha</p>
-                        <input id="characterCharacteristicBaseCharismaField" class="characterClassPanelCharacteristicBoxField">
+                        <input id="chaCharacteristicBaseField" class="characterClassPanelCharacteristicBoxField">
                         <p class="characterClassPanelCharacteristicBoxText centerFlexAlign bold" style="margin-top: 5vh">Cha Mods</p>
                     </div>
                     <button class="characterClassPanelCharacteristicBoxButton centerFlexAlign" id="classesCharismaModBtn">Add Cha Mod</button>
