added basic class headers

--- a/public/index.html
+++ b/public/index.html
@@ -263,8 +263,7 @@
             <div id="characterClassesMainPanel">
                 <!-- The subpanel containing the classes and levels for the character -->
                 <div id="characterClassesClassSubpanel" class="characterClassesSubpanel">
-                    <h1 class="characterClassSubpanelHeader">Classes</h1>
-                    <!-- Every class the player has will show here, as well as an option to add a class -->
+                    <h1 class="characterClassSubpanelHeader">Class and Levels</h1>
                     <!-- Button that when pressed, allows you to make a new class (can be input-confirmed deleted via right click) -->
                 </div>
 
