basic keyword support

--- a/public/index.html
+++ b/public/index.html
@@ -310,6 +310,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- The reference side menu that appears when a keyword is clicked -->
+        <div id="characterReferenceSideMenu" class="characterReferenceSideMenu characterReferenceSideMenuClosed"></div>
     </div>
 
     <!-- The main game canvas -->
