Added a dice roll popup

--- a/public/index.html
+++ b/public/index.html
@@ -317,6 +317,9 @@
 
     <!-- The main game canvas -->
 
+    <!-- The holder for dice results and popups from numerical outcomes -->
+    <div id="diceRollPopupHolder"></div>
+
     <!-- The popup menu, which displays various alerts and notifications while using the app -->
     <div id="popupMenu" class="hidden">
         <div class="popupBackground"></div>
