--- a/public/index.html
+++ b/public/index.html
@@ -366,7 +366,7 @@
     <!-- The loading screen, which appears when processing content or loading the page -->
     <div id="loadingScreen">
         <div id="loadingBackground"></div>
-        <div id="loadingSpinner">Loading...</div>
+        <div id="loadingSpinner" class="noselect">Loading...</div>
     </div>
 </body>
 <script src="helpers.js" type="module"></script>
