asset syncing setup

--- a/public/index.html
+++ b/public/index.html
@@ -361,6 +361,8 @@
         <button id="popupMenuLeftDoubleButton" class="popupMenuButton hidden">Confirm</button>
         <button id="popupMenuRightDoubleButton" class="popupMenuButton hidden">Cancel</button>
         <input id="popupMenuInput" class="popupMenuButton hidden" placeholder="Type Here">
+        <label id="popupMenuFileDropLabel" for="popupMenuFileDrop" class="popupMenuButton centerFlexAlign hidden">Click to Upload a File</label>
+        <input id="popupMenuFileDrop" type="file" class="hiddenFileDrop">
     </div>
 
     <!-- The loading screen, which appears when processing content or loading the page -->
