added relative space

--- a/public/index.html
+++ b/public/index.html
@@ -365,6 +365,9 @@
         <input id="popupMenuFileDrop" type="file" class="hiddenFileDrop">
     </div>
 
+    <!-- When disconnected, this popup allows you to attempt a reconnect -->
+    <div id="reconnectPrompter" class="hidden">You have been disconnected<br>Click to attempt to reconnect</div>
+
     <!-- The loading screen, which appears when processing content or loading the page -->
     <div id="loadingScreen">
         <div id="loadingBackground"></div>
