token objects and rendering

--- a/public/index.html
+++ b/public/index.html
@@ -319,6 +319,7 @@
     <div id="simulatorMenu" class="menu hidden">
         <!-- The canvas for rendering the game -->
         <canvas id="gameCanvas"></canvas>
+        <canvas id="buildCanvas"></canvas>
     </div>
 
     <!-- Has buttons and widgets for editing character sheets, creating/joining lobbies, and other stuff like settings -->
